// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic-math manipulatives render goldens (default state) > renders + pins a digest for areamodel 1`] = `
{
  "buttons": 42,
  "circles": 0,
  "inputs": 3,
  "lengthBucket": 100,
  "rects": 0,
  "sha": "1f59e841779a0be9",
  "svgs": 0,
}
`;

exports[`basic-math manipulatives render goldens (default state) > renders + pins a digest for base10 1`] = `
{
  "buttons": 52,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 100,
  "rects": 0,
  "sha": "88bf1989380e2258",
  "svgs": 0,
}
`;

exports[`basic-math manipulatives render goldens (default state) > renders + pins a digest for coordinate 1`] = `
{
  "buttons": 14,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 66,
  "rects": 0,
  "sha": "04e84c546b2aeb57",
  "svgs": 1,
}
`;

exports[`basic-math manipulatives render goldens (default state) > renders + pins a digest for fractionViz 1`] = `
{
  "buttons": 41,
  "circles": 1,
  "inputs": 2,
  "lengthBucket": 75,
  "rects": 0,
  "sha": "664d68116599618d",
  "svgs": 1,
}
`;

exports[`basic-math manipulatives render goldens (default state) > renders + pins a digest for fractions 1`] = `
{
  "buttons": 41,
  "circles": 1,
  "inputs": 2,
  "lengthBucket": 75,
  "rects": 0,
  "sha": "664d68116599618d",
  "svgs": 1,
}
`;

exports[`basic-math manipulatives render goldens (default state) > renders + pins a digest for moneyMath 1`] = `
{
  "buttons": 29,
  "circles": 7,
  "inputs": 0,
  "lengthBucket": 165,
  "rects": 9,
  "sha": "09bf6f46e5463a8b",
  "svgs": 1,
}
`;

exports[`basic-math manipulatives render goldens (default state) > renders + pins a digest for multtable 1`] = `
{
  "buttons": 22,
  "circles": 0,
  "inputs": 4,
  "lengthBucket": 163,
  "rects": 0,
  "sha": "ccb9ee4bf6f79bda",
  "svgs": 0,
}
`;

exports[`basic-math manipulatives render goldens (default state) > renders + pins a digest for numberline 1`] = `
{
  "buttons": 21,
  "circles": 0,
  "inputs": 5,
  "lengthBucket": 85,
  "rects": 1,
  "sha": "27c68adcc3a8f069",
  "svgs": 2,
}
`;

exports[`basic-math manipulatives render goldens (default state) > renders + pins a digest for protractor 1`] = `
{
  "buttons": 69,
  "circles": 3,
  "inputs": 4,
  "lengthBucket": 157,
  "rects": 0,
  "sha": "b6523d4994552e0e",
  "svgs": 1,
}
`;

exports[`basic-math manipulatives render goldens (default state) > renders + pins a digest for volume 1`] = `
{
  "buttons": 33,
  "circles": 0,
  "inputs": 6,
  "lengthBucket": 195,
  "rects": 0,
  "sha": "c8179303140ed9f8",
  "svgs": 0,
}
`;
